[project]
name = "memx"
version = "0.1.4"
description = "Lightweight and agnostic memory layer for LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
]

[dependency-groups]
all = [
    "aiosqlite>=0.21.0",
    "orjson>=3.11.4",
    "psycopg>=3.2.12",
    "pymongo>=4.15.3",
    "sqlalchemy>=2.0.44"
]

dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2"
]

[tool.ruff]
line-length = 99
lint.fixable = ["ALL"]
lint.unfixable = ["F401", "F403"]
lint.ignore = ["F401", "F403"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportInvalidTypeForm = "none"
reportArgumentType = false
