[project]
name = "memx"
version = "0.1.6"
description = "Lightweight and agnostic memory layer for LLMs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Pablo Galilea", email = "pgalilea@me.com" },
]
dependencies = [
    "aiofiles>=25.1.0",
    "orjson>=3.11.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2"
]

[project.optional-dependencies]
all = [
    "aiosqlite>=0.21.0",
    "psycopg>=3.2.12",
    "pymongo>=4.15.3",
    "sqlalchemy[asyncio, postgresql-psycopg]>=2.0.44"
]

sqlite = [
    "sqlalchemy[asyncio]>=2.0.44",
    "aiosqlite>=0.21.0"
]

postgres = [
    "sqlalchemy[postgresql-psycopg, asyncio]>=2.0.44",
    "psycopg>=3.2.12"
]

mongodb = [
    "pymongo>=4.15.3"
]

[tool.ruff]
line-length = 99
lint.fixable = ["ALL"]
lint.unfixable = ["F401", "F403"]
lint.ignore = ["F401", "F403"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportInvalidTypeForm = "none"
reportArgumentType = false
